--- a/ExDSM-WS.vcxproj.filters
+++ b/ExDSM-WS.vcxproj.filters
@@ -15,10 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="etFx.cpp">
+    <ClCompile Include="jsoncpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="jsoncpp.cpp">
+    <ClCompile Include="DataManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pkg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="user.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="etFx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -38,5 +50,36 @@
     <ClInclude Include="json\json.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DataManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pkg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="webpages\1.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="webpages\2.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="webpages\3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="webpages\4.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="webpages\index.css">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="webpages\index.html">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
