--- a/ExDSM-WS.vcxproj.filters
+++ b/ExDSM-WS.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="user.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="webpages\1.jpg">
@@ -81,5 +84,10 @@
     <None Include="webpages\index.html">
       <Filter>Resource Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ExDSM-WS.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
